--- a/src/app/entregas/reyna/components/reynaComponent/reynaComponent.html
+++ b/src/app/entregas/reyna/components/reynaComponent/reynaComponent.html
@@ -1,10 +1,22 @@
 <header>
-    <h1>Entrega Reyna</h1>
+  <h1>Entrega Reyna</h1>
 </header>
 <main>
-    <h2>Catálogo de productos</h2>
-    
+  <h2>Catálogo de productos</h2>
+  <div class="busqueda mb-3">
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Buscar productos..."
+      [(ngModel)]="busqueda"
+    />
+  </div>
+ <div class="row g-3">
+  @for (product of filtrarProducts; track product.id) {
+    <div class="col-md-4">
+      <app-product-card-unrouted [product]="product"></app-product-card-unrouted>
+    </div>
+  }
+</div>
 </main>
-<footer>
-
-</footer>
+<footer></footer>
