--- a/src/app/entregas/reyna/components/reynaComponent/reynaComponent.html
+++ b/src/app/entregas/reyna/components/reynaComponent/reynaComponent.html
@@ -1,8 +1,4 @@
-<link rel="stylesheet" href="./reynaComponent.css" />
-<header>
-  <h1>Entrega Reyna</h1>
-  <app-navbar-unrouted></app-navbar-unrouted>
-</header>
+<app-header-unrouted></app-header-unrouted>
 <main>
   <h2>Catálogo de productos</h2>
   <div class="busqueda mb-3">
