--- a/src/app/entregas/reyna/components/product-detail-modal-unrouted/product-detail-modal-unrouted.html
+++ b/src/app/entregas/reyna/components/product-detail-modal-unrouted/product-detail-modal-unrouted.html
@@ -1,10 +1,12 @@
-<h2 mat-dialog-title>{{ data.title }}</h2>
+<div class="pt-20px text-center">
+    <h2 mat-dialog-title>{{ product.title }}</h2>
+</div>
 <mat-dialog-content>
-  <img [src]="data.image" alt="{{ data.title }}" class="img-fluid mb-3" />
-  <p><strong>Categoría:</strong> {{ data.category }}</p>
-  <p><strong>Precio:</strong> {{ data.price | currency:'EUR' }}</p>
-  <p><strong>Descripción:</strong> {{ data.description }}</p>
-  <p><strong>Rating:</strong> ★ {{ data.rating.rate }} ({{ data.rating.count }} votos)</p>
+  <img [src]="product.image" alt="{{ product.title }}" class="img-fluid mb-3" />
+  <p><strong>Categoría:</strong> {{ product.category }}</p>
+  <p><strong>Precio:</strong> {{ product.price | currency:'EUR' }}</p>
+  <p><strong>Descripción:</strong> {{ product.description }}</p>
+  <p><strong>Rating:</strong> ★ {{ product.rating.rate }} ({{ product.rating.count }} votos)</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button color="primary" (click)="cerrar()">Cerrar</button>
