--- a/src/app/entregas/reyna/components/product-search-unrouted/product-search-unrouted.html
+++ b/src/app/entregas/reyna/components/product-search-unrouted/product-search-unrouted.html
@@ -11,6 +11,13 @@
   <div class="col-md-2">
     <button type="submit" class="btn btn-primary w-100">Buscar</button>
   </div>
+  @if (priceRangeInvalid) {
+    <div class="col-12">
+      <div class="alert alert-danger" role="alert">
+        El rango de precios no es válido. Asegúrate de que el precio mínimo sea menor o igual al precio máximo.
+      </div>
+    </div>
+  }
 </form>
 
 <div class="row g-3">
